# my-awesome-ra

./: .gitignore  README.md  claude.md  demo.md
.claude/agents/: project-verifier.md
.claude/skills/verification-validator/: SKILL.md
.claude/skills/verification-validator/references/: overleaf-checks.md  playwright-patterns.md  verification-strategies.md
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/api/src/: __init__.py  main.py
apps/api/src/models/: __init__.py  chat.py  citation.py  document.py  evidence.py
apps/api/src/routers/: __init__.py  chat.py  citations.py  documents.py  evidence.py
apps/api/src/services/: __init__.py  chat.py  embedding.py  index.py  solar.py
apps/api/tests/: __init__.py  conftest.py  test_evidence.py  test_main.py
apps/api/tests/integration/: test_document_flow.py  test_search_with_seed.py
apps/api/tests/unit/: test_index_chunking.py  test_index_faiss.py  test_index_metadata.py
demo-package/: .env.example  README.md  docker-compose.yml
demo-package/api/: Dockerfile
deployment/: Dockerfile.overleaf  docker-compose.dev.yml  docker-compose.overleaf.yml  docker-compose.yml
fixtures/: pdf_citekey_mapping.json
fixtures/latex/: main.tex
fixtures/seed/: chroma.sqlite3  index.faiss  metadata.npy
overleaf/services/web/config/: settings.defaults.js
overleaf/services/web/frontend/stylesheets/modules/: all.scss  evidence-panel.scss
overleaf/services/web/locales/: en.json
scripts/: build_seed_via_api.sh  index_fixtures.py  regenerate_seed_test.py  seed-data.sh  setup-demo.sh
(+30 files in other folders)
